--- a/index1.html
+++ b/index1.html
@@ -23,22 +23,16 @@
 
 <div class="container">
     <h2 class="question1">Commonly used data types DO NOT included?</h2>
-        <ul>
-            <li>
                 <button  id="strings" class="btn">1. strings</button>
-            </li>
-            <li>
-                 <button  id="boolean" class="btn">2. boolean</button>
-            </li>
-            <li>
+                <button  id="boolean" class="btn">2. boolean</button>
                 <button  id="alerts" class="btn">3. alerts</button>
-            </li>
-            <li>
                 <button  id="numbers" class="btn">4. numbers</button>
-            </li>
-        </ul>
 </div>
 
      <script src="./assets/js/script.js"></script>
+     <script type="text/javascript"></script>
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script></script>
+     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
 </html>
