--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/mystyle.css"/>
@@ -11,30 +13,38 @@
 
 <body>
     <header>
-      <nav>
-         <ul>
-             <li>
-                 <a href="#view-high-scores">View High Scores</a>
-             </li>
-             <li>
-                 <a href="#time" span id="count">Time:0</span></a>
-             </li>
-         </ul> 
-      </nav>
+      <a href="high-score" id="try-again">High Score</a>
+      <p href="#time" span id="count">Time: 0</span></p>
     </header>
 
-    <main class="page-content">
+    <!-- Main section and div-->
+    <main class="container">
+        <h1>Code Quiz Challenge</h1>
+        <a>Try to answer the following code-related questions within the time limit. Keep in mind that incorect answers will pe</a>
+    <div class="page-content">
+        <div id="question-container">
+        </div>
+        <div id="questions"></div>
+        <div id="answers"></div>
+        <div class="timer"></div>
+        <div class="high-scores"></div>
+        <div id="start-div"></div>
 
-        <h1 class="page-title">Coding Quiz Challenge</h1>
-        <h2 id="countdown"></h2>
-        <!--h3>Try to answer the following code-related questions within the time limit.
-            Keep in mind that incorect answers will penalize your score/time by ten seconds!
-        </h3-->
-        <button  id="startQuiz" class="btn">Start Quiz</button>
-          <!--<button  type="button" class="btn" id="startQuiz" value="Redirect Me" onclick="page1();">Start Quiz</button-->
-      
+        <h1 id="question-text"></h1>
+            <section id="answers">
+            </section>
+            <div id="score-board">
+            <div id="box"></div>
+            </div>
+            </div>
+    <!-- Main section and div Ends-->        
+    <div>
+        <a href="./index1.html" class="btn btn-info" role="button">Start Quiz</a>
+        </div>
+
+    <h2 id="countdown"></h2>   
      </main> 
-     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script></script>
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     <script src="./assets/js/script.js"></script>
