--- a/index1.html
+++ b/index1.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/mystyle.css" />
     <title>question1</title>
 </head>
@@ -21,16 +22,20 @@
         </nav>
       </header>
 
-<div class="container">
-    <h2 class="question1">Commonly used data types DO NOT included?</h2>
-                <button  id="strings" class="btn">1. strings</button>
-                <button  id="boolean" class="btn">2. boolean</button>
-                <button  id="alerts" class="btn">3. alerts</button>
-                <button  id="numbers" class="btn">4. numbers</button>
+<main class="container">
+    <h1>Code Quiz Challenge</h1>
+    <p>Commonly used data types DO NOT included?</p> 
+    
+    <div class="btn-group-vertical">
+        <button  type="button" class="btn btn-primary">1. strings</button>
+        <button  type="button" class="btn btn-primary">2. boolean</button>
+        <button  type="button" class="btn btn-primary">3. alerts</button>
+        <button  type="button" class="btn btn-primary">4. numbers</button>
 </div>
 
      <script src="./assets/js/script.js"></script>
      <script type="text/javascript"></script>
+     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script></script>
      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
