--- a/index5.html
+++ b/index5.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/mystyle.css" />
-    <title>question2</title>
+    <title>question3</title>
 </head>
 <body>
     <body>
@@ -26,13 +26,13 @@
     <main class="container">
         <h1>Code Quiz Challenge</h1>
 
-        <p class="welcome">The condition in an if / else statement is enclosed within______?</p>
+        <p class="welcome">A very useful tool used during development and debugging for printing content to the debugger is?</p>
         <div class="container">
     <div class="btn-group-vertical">
-                <button  type="button" class="btn btn-primary">1. Quotes</button>
-                <button  type="button" class="btn btn-primary">2. Curly Brackets</button>
-                <button  type="button" class="btn btn-primary">3. Parantheses</button>
-                <button  type="button" class="btn btn-primary">4. Square Brackets</button>
+                <button  type="button" class="btn btn-primary">1.For Loops</button>
+                <button  type="button" class="btn btn-primary">2. Console.log</button>
+                <button  type="button" class="btn btn-primary">3. Javascript</button>
+                <button  type="button" class="btn btn-primary">4. Terminal/Bash</button>
 </div>
 
      <script src="./assets/js/script.js"></script>
