updated highscore and done html files

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-      <a href="high-score" id="try-again">High Score</a>
+      <a href="./highscores.html" id="try-again">High Score</a>
       <p href="#time" span id="count">Time: 0</span></p>
     </header>
 
@@ -25,13 +25,14 @@
         <div id="question-container">
         </div>
         <div id="questions"></div>
-        <div id="answers"></div>
+        <div id="right-answer"></div>
+        <div id="wrong-answer"></div>
+
         <div class="timer"></div>
         <div class="high-scores"></div>
         <div id="start-div"></div>
 
         <h1 id="question-text"></h1>
-            <section id="answers">
             </section>
             <div id="score-board">
             <div id="box"></div>
@@ -41,8 +42,9 @@
     <div>
         <a href="./index1.html" class="btn btn-info" role="button">Start Quiz</a>
         </div>
-
-    <h2 id="countdown"></h2>   
+        <div>
+    <h2 id="countdown"></h2>  
+    </div> 
      </main> 
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
