--- a/index1.html
+++ b/index1.html
@@ -8,20 +8,15 @@
     <link rel="stylesheet" href="./assets/css/mystyle.css" />
     <title>question1</title>
 </head>
-<body>
-    <header>
-        <nav>
-           <ul>
-               <li>
-                   <a href="#view-high-scores">View High Scores</a>
-               </li>
-               <li>
-                   <a href="#time" span id="count">Time:0</span></a>
-               </li>
-           </ul> 
-        </nav>
-      </header>
 
+<body>
+
+<header>
+    <a href="./highscores.html" id="try-again">High Score</a>
+    <p href="#time" span id="count">Time: 0</span></p>
+</header>
+    
+<!-- Main section and div-->
 <main class="container">
     <h1>Code Quiz Challenge</h1>
     <p>Commonly used data types DO NOT included?</p> 
