--- a/index2.html
+++ b/index2.html
@@ -9,19 +9,10 @@
     <title>question2</title>
 </head>
 <body>
-    <body>
-        <header>
-            <nav>
-               <ul>
-                   <li>
-                       <a href="#view-high-scores">View High Scores</a>
-                   </li>
-                   <li>
-                       <p href="#time" span id="count">Time:0</span></p>
-                   </li>
-               </ul> 
-            </nav>
-          </header>
+    <header>
+        <a href="./highscores.html" id="try-again">High Score</a>
+        <p href="#time" span id="count">Time: 0</span></p>
+    </header>
     
     <main class="container">
         <h1>Code Quiz Challenge</h1>
