--- a/index3.html
+++ b/index3.html
@@ -11,17 +11,9 @@
 <body>
     <body>
         <header>
-            <nav>
-               <ul>
-                   <li>
-                       <a href="#view-high-scores">View High Scores</a>
-                   </li>
-                   <li>
-                       <p href="#time" span id="count">Time:0</span></p>
-                   </li>
-               </ul> 
-            </nav>
-          </header>
+            <a href="./highscores.html" id="try-again">High Score</a>
+            <p href="#time" span id="count">Time: 0</span></p>
+        </header>
     
     <main class="container">
         <h1>Code Quiz Challenge</h1>
