--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/mystyle.css" />
-    <title>question1</title>
+    <title>Code Quiz</title>
 </head>
 
 <body>
@@ -61,7 +61,7 @@
             <ol id="high-score-list" class="score-list"></ol>
             <div>
                 <button class="btn" id="go-back">Go back</button>
-                <button class="btn" id="clear-high-scores">Clear high scores</button>
+                <button class="btn" id="clear-high-scores">Clear High Scores</button>
             </div>
         </section>
 
@@ -69,7 +69,7 @@
 
     
     <script src="./assets/js/questions.js"></script>
-    <script src="./assets/js/script1.js"></script>
+    <script src="./assets/js/script.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
